# bip375-examples

./: .gitignore  README.md  test_vectors.json
python/psbt_sp/: psbt.py  psbt_utils.py  serialization.py
python/tests/: test_generator.py  validate_tests_examples.py
rust/: justfile
rust/crates/spdk-uniffi/: README.md  pyproject.toml
rust/crates/spdk-uniffi/examples/: simple_example.py
rust/crates/spdk-uniffi/src/: crypto.rs  errors.rs  lib.rs  spdk_psbt.udl  types.rs
rust/crates/spdk-uniffi/tests/: test_basic.py
rust/examples/hardware-signer/src/: shared_utils.rs  wallet_coordinator.rs
rust/examples/multi-signer/src/: shared_utils.rs  workflow_actions.rs
rust/examples/multi-signer/src/cli/: menu.rs
rust/examples/multi-signer/src/core/: app_state.rs  workflow_orchestrator.rs
rust/examples/multi-signer/src/gui/: mod.rs
rust/examples/multi-signer/ui/: app.slint
rust/tests/: test_vectors.rs
rust/tools/psbt-viewer/src/: main.rs  resources.rs
