[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "spdk_psbt"
version = "0.1.0"
description = "Python bindings for BIP-375 (Silent Payments with PSBTs) implementation in Rust"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "macgyver13" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["bitcoin", "spdk", "silent-payments", "psbt", "cryptography"]

[project.urls]
Homepage = "https://github.com/macgyver13/spdk/spdk_psbt"
Repository = "https://github.com/macgyver13/spdk/spdk_psbt"
Documentation = "https://github.com/macgyver13/spdk/spdk_psbt/blob/main/README.md"

[tool.maturin]
bindings = "uniffi"
module-name = "spdk_psbt"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]
